<resources>
    <string name="app_name">Marvel Comics</string>

    <!--Toolbar & Menu -->
    <string name="marvel_comics">Marvel Comics</string>
    <string name="info_menu">Informação</string>
    <string name="carrinho">Carrinho</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Row Item Comic -->
    <string name="nome_do_quadrinho">Nome do Quadrinho</string>
    <string name="detalhes">Detalhes</string>

    <!-- Fragment Comics -->
    <string name="no_connection">Verifique a conexão, sem internet</string>
    <string name="sinopse">Sinopse</string>
    <string name="price">Price</string>

    <!-- Description Comic -->
    <string name="Aumento">+</string>
    <string name="Menos">-</string>
    <string name="one">1</string>

    <!-- Cart Fragment -->
    <string name="inserir">Inserir</string>
    <string name="informe_cupom">Informe o Cupom</string>
    <string name="lista_de_compras">Lista de Compras</string>
    <string name="valor_da_compra">Valor da Compra</string>

    <!-- ComicBindingAdapter -->
    <string name="acronym_money">R$</string>
    <string name="ee">sss</string>

</resources>