<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="comic"
            type="com.example.marvelcomics.data.model.Comic" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.description.DescriptionFragment">

        <ImageView
            android:id="@+id/imageBannerComic"
            loadImage="@{comic}"
            android:layout_width="100sp"
            android:layout_height="150sp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.147"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            listPricePlots="@{comic.prices}"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/imageBannerComic"
            tools:text="Parcelas" />

        <TextView
            android:id="@+id/textView4"
            listPrice="@{comic.prices}"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:textColor="@color/darker"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageBannerComic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageBannerComic"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.084"
            tools:text="@string/price" />

        <Button
            android:id="@+id/button2"
            android:layout_width="195dp"
            android:layout_height="31dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="Adicionar ao carrinho"
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageBannerComic" />

        <Button
            android:id="@+id/button"
            android:layout_width="195dp"
            android:layout_height="31dp"
            android:background="@color/colorPrimary"
            android:text="Comprar"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sinopse"
            android:textColor="@color/redPersonality"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@{comic.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:text="@string/detalhes" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>